improve lablling interface

--- a/notebooks/images_labeling.ipynb
+++ b/notebooks/images_labeling.ipynb
@@ -142,8 +142,11 @@
     "labelOptions = {c['tag']:c['options'] for c in labelOptions}\n",
     "\n",
     "labelling_states = {\n",
-    "    'selected_tags': set(),\n",
-    "    'offset': 0,\n",
+    "    'filter_states': {\n",
+    "        'tags': set(),\n",
+    "        'offset': 0,\n",
+    "        'image_id': ''\n",
+    "    },\n",
     "    'all_images': all_images,\n",
     "    'images': all_images[:50],\n",
     "    'current_image_id': '',\n",
@@ -199,7 +202,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dcdfd9a1b9ce495592a0876c4fd98332",
+       "model_id": "5f26e058c7e94c19abc430adae6a9931",
        "version_major": 2,
        "version_minor": 0
       },
@@ -240,9 +243,18 @@
     "    return visLabels[0] if visLabels else None\n",
     "\n",
     "def find_image (image_id):\n",
-    "    return imagelabel.find_one({'$or': [{'image_id': image_id}, {'duplicated_images': image_id}]})\n",
+    "    if '/' not in image_id:\n",
+    "        image_id = imagemeta.find_one({'short_image_id': image_id}, {'image_id': True})['image_id']\n",
+    "    image = imagelabel.find_one({'$or': [{'image_id': image_id}, {'duplicated_images': image_id}]})\n",
+    "    if not image:\n",
+    "        print(f\"Image not found: {image_id}\")\n",
+    "    return image\n",
     "\n",
-    "def find_images_by_tags (tags=[], limit=50, offset=0):\n",
+    "def find_images_by (tags=[], image_id='', offset=0, limit=50):\n",
+    "    if image_id != '':\n",
+    "        image = find_image(image_id)\n",
+    "        return [image] if image else []\n",
+    "\n",
     "    if len(tags) == 0:\n",
     "        return labelling_states['all_images'][offset:offset+limit]\n",
     "\n",
@@ -696,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {
     "Collapsed": "false"
    },
@@ -708,19 +720,26 @@
     "    def ckb_handler (change):\n",
     "        tag = change['owner'].tag\n",
     "        if change['new']:\n",
-    "            labelling_states['selected_tags'].add(tag)\n",
+    "            labelling_states['filter_states']['tags'].add(tag)\n",
     "        else:\n",
-    "            labelling_states['selected_tags'].remove(tag)\n",
+    "            labelling_states['filter_states']['tags'].remove(tag)\n",
     "        if on_filter_change:\n",
-    "            on_filter_change(list(labelling_states['selected_tags']), labelling_states['offset'])\n",
+    "            on_filter_change(labelling_states['filter_states'])\n",
     "\n",
-    "    def textbox_handler (change):\n",
-    "        labelling_states['offset'] = change['new']\n",
-    "        on_filter_change(list(labelling_states['selected_tags']), labelling_states['offset'])\n",
+    "    def image_id_textbox_handler (change):\n",
+    "        labelling_states['filter_states']['image_id'] = change['new']\n",
+    "        on_filter_change(labelling_states['filter_states'])\n",
+    "\n",
+    "    def offset_textbox_handler (change):\n",
+    "        labelling_states['filter_states']['offset'] = change['new']\n",
+    "        on_filter_change(labelling_states['filter_states'])\n",
     "\n",
     "    ckbs = []\n",
-    "    offset_textbox = widgets.BoundedIntText(value=labelling_states['offset'], min=0, max=len(labelling_states['all_images']), step=1, description='Offset', disabled=False, layout={'width':'200px'})\n",
-    "    offset_textbox.observe(textbox_handler, names='value')\n",
+    "    image_id_textbox = widgets.Text(value='', placeholder='1yb04c_0', description='Image ID:', disabled=False, layout={'width':'180px'})\n",
+    "    image_id_textbox.observe(image_id_textbox_handler, names='value')\n",
+    "    ckbs.append(image_id_textbox)\n",
+    "    offset_textbox = widgets.BoundedIntText(value=labelling_states['filter_states']['offset'], min=0, max=len(labelling_states['all_images']), step=gallery_limit, description='Offset', disabled=False, layout={'width':'180px'})\n",
+    "    offset_textbox.observe(offset_textbox_handler, names='value')\n",
     "    ckbs.append(offset_textbox)\n",
     "    for cat, opts in options.items():\n",
     "        for subcat, options in group_by(opts, lambda o: o.get('subcategory', '')).items():\n",
@@ -760,14 +779,14 @@
     "    def select_handler (image_id):\n",
     "        show_img(image_id, labelBoxOutput)\n",
     "\n",
-    "    labelling_states['images'] = find_images_by_tags(limit=gallery_limit, offset=labelling_states['offset'])\n",
+    "    labelling_states['images'] = find_images_by(limit=gallery_limit, offset=labelling_states['filter_states']['offset'])\n",
     "\n",
     "    galleryOutput = widgets.Output(layout=Layout(**layoutArgs, height=f\"{gallery_height-20}px\"))\n",
     "    with galleryOutput:\n",
     "        display(make_gallery_box(labelling_states['images'], on_select=select_handler, layoutArgs=layoutArgs))\n",
     "\n",
-    "    def filter_handler (tags, offset):\n",
-    "        labelling_states['images'] = find_images_by_tags(tags=tags, limit=gallery_limit, offset=offset)\n",
+    "    def filter_handler (filter_states):\n",
+    "        labelling_states['images'] = find_images_by(tags=list(filter_states['tags']), image_id=filter_states['image_id'], offset=filter_states['offset'], limit=gallery_limit)\n",
     "        galleryOutput.clear_output()\n",
     "        with galleryOutput:\n",
     "            display(make_gallery_box(labelling_states['images'], on_select=select_handler, layoutArgs=layoutArgs))\n",
@@ -789,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {
     "Collapsed": "false"
    },
@@ -797,12 +816,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9a1d277fc57e41e6af4684957f4c51ad",
+       "model_id": "a98869d969f94374b09f8ac07804e595",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "AppLayout(children=(VBox(children=(BoundedIntText(value=0, description='Offset', layout=Layout(width='200px'),…"
+       "AppLayout(children=(VBox(children=(Text(value='', description='Image ID:', layout=Layout(width='180px'), place…"
       ]
      },
      "metadata": {},
@@ -823,7 +842,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3cfed501638d40aa99dc25eb1531c8cd",
+       "model_id": "7e79b64247f04a5d805164b4d1aab162",
        "version_major": 2,
        "version_minor": 0
       },
