improve lablling interface

--- a/notebooks/images_labeling.ipynb
+++ b/notebooks/images_labeling.ipynb
@@ -202,7 +202,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5f26e058c7e94c19abc430adae6a9931",
+       "model_id": "5fd238769a6e4a469450274db641bcf9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -259,11 +259,13 @@
     "        return labelling_states['all_images'][offset:offset+limit]\n",
     "\n",
     "    images = []\n",
-    "    for l in vislabels.find({'labels': {'$all': tags}}).sort('popularity_score').limit(limit).skip(offset):\n",
+    "    for l in vislabels.find({'labels': {'$all': tags}}).limit(limit).skip(offset):\n",
     "        image = find_image(l['image_id'])\n",
     "        if image:\n",
     "            images.append(image)\n",
     "#             images.append({**image, 'labels': l['labels']})\n",
+    "    images.sort(key=lambda x: x['popularity_score'])\n",
+    "    images.reverse()\n",
     "    return images"
    ]
   },
@@ -452,7 +454,7 @@
     "    mediaCkbsBox, mediaCkbsByName = make_ckbs('media', options['media'], n_rows, layoutArgs, on_ckb_change)\n",
     "    flagCkbsBox, flagCkbsByName = make_ckbs('flag', options['flag'], n_rows, layoutArgs, on_ckb_change)\n",
     "\n",
-    "    faultCkbsBox, faultCkbsByName = make_ckbs('fault', options['fault'], 10, layoutArgs, on_ckb_change, grouping=True, ckb_width=180)\n",
+    "    faultCkbsBox, faultCkbsByName = make_ckbs('fault', options['fault'], 10, layoutArgs, on_ckb_change, grouping=True, sorting=False,  ckb_width=180)\n",
     "    effectCkbsBox, effectCkbsByName = make_ckbs('effect', options['effect'], n_rows, layoutArgs, on_ckb_change)\n",
     "\n",
     "    remarksBox, remarks = make_remarks(n_rows, layoutArgs=layoutArgs)\n",
@@ -671,25 +673,19 @@
    },
    "outputs": [],
    "source": [
-    "def prev_id (image_id):\n",
-    "    idx = find_image_idx(labelling_states['images'], image_id)\n",
-    "    new_idx = max(0, idx - 1)\n",
-    "    new_image_id = labelling_states['images'][new_idx]['image_id']\n",
-    "    set_current_image_id(new_image_id)\n",
-    "    return new_image_id\n",
-    "\n",
-    "def next_id (image_id):\n",
-    "    idx = find_image_idx(labelling_states['images'], image_id)\n",
-    "    new_idx = min(len(labelling_states['images']), idx + 1)\n",
-    "    new_image_id = labelling_states['images'][new_idx]['image_id']\n",
+    "def next_id (image_id, prev=False):\n",
+    "    images = labelling_states['all_images'] if len(labelling_states['filter_states']['tags']) == 0 else labelling_states['images']\n",
+    "    idx = find_image_idx(images, image_id)\n",
+    "    new_idx = max(0, idx - 1) if prev else min(len(images) - 1, idx + 1)\n",
+    "    new_image_id = images[new_idx]['image_id']\n",
     "    set_current_image_id(new_image_id)\n",
     "    return new_image_id\n",
     "\n",
     "def prev_img (output, image_id):\n",
-    "    show_img(prev_id(image_id), output)\n",
+    "    show_img(next_id(image_id, prev=True), output)\n",
     "\n",
     "def next_img (output, image_id):\n",
-    "    show_img(next_id(image_id), output)\n",
+    "    show_img(next_id(image_id, prev=False), output)\n",
     "\n",
     "def show_img (image_id, output=None):\n",
     "    output.clear_output()\n",
@@ -708,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {
     "Collapsed": "false"
    },
@@ -808,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {
     "Collapsed": "false"
    },
@@ -816,7 +812,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a98869d969f94374b09f8ac07804e595",
+       "model_id": "a33e9a86b1a04ab598597acb61712422",
        "version_major": 2,
        "version_minor": 0
       },
@@ -842,7 +838,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e79b64247f04a5d805164b4d1aab162",
+       "model_id": "9dbc66e8315d4d9eb6ecb1791cbbe938",
        "version_major": 2,
        "version_minor": 0
       },
