add image count

--- a/notebooks/images_labeling.ipynb
+++ b/notebooks/images_labeling.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# !pip install termcolor\n",
     "# !pip install termcolor"
    ]
   },
@@ -109,9 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "# Labeling"
    ]
