remove redundant attributes

--- a/notebooks/images_thumbnail.ipynb
+++ b/notebooks/images_thumbnail.ipynb
@@ -522,11 +522,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "json.dump({'images': [pick(i, ['image_name', 'thumbnail_path', 'labels']) for i in visImages]}, open(imagelist_dir/'dir.json', 'w'), separators=(',', ':'))\n",
+    "json.dump({'images': [pick(i, ['image_name', 'thumbnail_path']) for i in visImages]}, open(imagelist_dir/'dir.json', 'w'), separators=(',', ':'))\n",
     "# json.dump({'images': [{'i': i['image_name'], 't': i['thumbnail_path'], 'l': i['labels']} for i in visImages]}, open(imagelist_dir/'dir.json', 'w'), separators=(',', ':'))"
    ]
   },
