fix image count for tags

--- a/notebooks/images_thumbnail.ipynb
+++ b/notebooks/images_thumbnail.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6383b162cf9b4987b1d311db2594aa62",
+       "model_id": "903ff83c7cfb4f51ab9e3306c04bf02d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -360,76 +360,10 @@
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.8/site-packages/PIL/Image.py:1016: UserWarning: Couldn't allocate palette entry for transparency\n",
-      "  warnings.warn(\"Couldn't allocate palette entry for transparency\")\n",
-      "/opt/conda/lib/python3.8/site-packages/PIL/Image.py:960: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.1397705078125 3.41829776763916 0.9185187251785194 ../images/preview_alt/reddit/dataisugly/7prl2y.jpg ../labelling/preview/7prl2y_0.jpg\n",
-      "3.6117963790893555 4.191091537475586 0.8617794068188841 ../images/external_link/reddit/dataisugly/b8yzcx.png ../labelling/preview/b8yzcx_0.png\n",
-      "3.033143997192383 3.034055709838867 0.9996995069525164 ../images/external_link/reddit/dataisugly/9yrx5b.png ../labelling/preview/9yrx5b_0.png\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.8/site-packages/PIL/Image.py:2832: DecompressionBombWarning: Image size (100000000 pixels) exceeds limit of 89478485 pixels, could be decompression bomb DOS attack.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.7925729751586914 5.436445236206055 0.6976200091009146 ../images/external_link/reddit/dataisugly/1l0ik8.jpg ../labelling/preview/1l0ik8_0.jpg\n",
-      "3.3860397338867188 3.4374008178710938 0.9850581626334212 ../images/external_link/reddit/dataisbeautiful/67o1cg.png ../labelling/preview/67qsvf_0.png\n",
-      "6.026668548583984 14.452349662780762 0.41700268047793687 ../images/external_link/reddit/dataisugly/dq9mu7.png ../labelling/preview/dq9mu7_0.png\n",
-      "6.1503095626831055 6.073509216308594 1.012645135396895 ../images/external_link/reddit/dataisbeautiful/8e3eax.png ../labelling/preview/8ebarl_0.png\n",
-      "4.6889448165893555 4.215606689453125 1.1122823266032997 ../images/external_link/reddit/dataisugly/8l1ph2.png ../labelling/preview/8l1ph2_0.png\n",
-      "3.838772773742676 4.339616775512695 0.8845879653253833 ../images/preview/reddit/dataisugly/bk4715.jpg ../labelling/preview/bk4715_0.jpg\n",
-      "7.172080039978027 9.16718578338623 0.7823644256207887 ../images/external_link/reddit/dataisugly/59d1r1.png ../labelling/preview/59d1r1_0.png\n",
-      "3.7005910873413086 3.2612733840942383 1.1347074137941622 ../images/external_link/reddit/dataisugly/dq5xr8.png ../labelling/preview/dq5xr8_0.png\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.8/site-packages/PIL/Image.py:2832: DecompressionBombWarning: Image size (135364608 pixels) exceeds limit of 89478485 pixels, could be decompression bomb DOS attack.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10.242236137390137 37.90362358093262 0.27021786229806494 ../images/archive/reddit/dataisugly/2jtymg.jpg ../labelling/preview/2jtymg_0.jpg\n",
-      "4.426243782043457 4.468886375427246 0.9904578926825562 ../images/archive/reddit/dataisugly/25rwp3.png ../labelling/preview/25rwp3_0.png\n",
-      "4.115008354187012 4.215928077697754 0.9760622758142846 ../images/preview/reddit/dataisugly/7ul36m.png ../labelling/preview/7ul36m_0.png\n",
-      "3.507852554321289 4.053823471069336 0.8653195136284442 ../images/external_link/reddit/dataisugly/6tmtcd.png ../labelling/preview/6tmtcd_0.png\n",
-      "3.040407180786133 3.039926528930664 1.0001581129842758 ../images/external_link/reddit/dataisugly/5rw1vb.png ../labelling/preview/5rw1vb_0.png\n",
-      "9.692337036132812 9.709271430969238 0.9982558531856045 ../images/preview/reddit/dataisugly/1i2d82.png ../labelling/preview/1i2d82_0.png\n",
-      "5.192234992980957 4.883182525634766 1.0632891491816636 ../images/external_link/reddit/dataisugly/83jhtx.png ../labelling/preview/83jhtx_0.png\n",
-      "3.0767078399658203 3.1175537109375 0.9868981019225498 ../images/external_link/reddit/dataisbeautiful/671s4d.png ../labelling/preview/679xth_0.png\n",
-      "4.338757514953613 4.338061332702637 1.0001604823439743 ../images/external_link/reddit/dataisugly/2if9jn.png ../labelling/preview/2if9jn_0.png\n",
-      "3.090320587158203 3.1064023971557617 0.9948230113354654 ../images/external_link/reddit/dataisugly/24zlq4.png ../labelling/preview/24zlq4_0.png\n",
-      "6.723217010498047 5.552765846252441 1.2107870557941034 ../images/external_link/reddit/dataisugly/2wkifl.png ../labelling/preview/2wkifl_0.png\n",
-      "7.034241676330566 10.878678321838379 0.6466081143524295 ../images/external_link/reddit/dataisugly/dprn2x.png ../labelling/preview/dprn2x_0.png\n",
-      "3.3443450927734375 4.334980010986328 0.7714787805936172 ../images/external_link/reddit/dataisugly/g33jyu.png ../labelling/preview/g33jyu_0.png\n",
-      "3.856700897216797 3.680304527282715 1.0479298298894633 ../images/preview_alt/reddit/dataisugly/6lu116.png ../labelling/preview/6lu116_0.png\n",
-      "11.521984100341797 13.685684204101562 0.8419004799839448 ../images/external_link/reddit/dataisugly/dr7mmy.png ../labelling/preview/dr7mmy_0.png\n",
-      "3.139894485473633 3.1458683013916016 0.9981010597565937 ../images/external_link/reddit/dataisugly/9usfzv.jpg ../labelling/preview/9usfzv_0.jpg\n",
-      "\n",
-      "3.1902122497558594 3.555360794067383 0.8972963461483783 ../images/manual/reddit/dataisugly/2eyowj.png ../labelling/preview/2eyowj_0.png\n"
+      "\n"
      ]
     }
    ],
@@ -3582,12 +3516,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'tag': 'form:unknown', 'subcategory': 'other', 'name': 'Unclassified', 'count': 16, 'category': 'form', 'images': ['8fok48_0', 'dld2yr_0', 'ezt3ag_0', 'dq9mu7_0', 'e4mzye_0', '2rd22k_0', '8uatud_0', '7ssujs_0', '4fj6dw_0', '9im3w9_0', 'chr3dh_0', '8f4qlt_0', 'eismwb_0', 'czp1vh_0', '8g6xi6_0', 'dau2cy_0']}\n"
+     ]
+    }
+   ],
    "source": [
     "for t in labelTags['tags']:\n",
-    "    t['images']= [i['image_name'] for i in visimages.find({'labels': t['tag']})]"
+    "    t['images'] = [i['image_name'] for i in visimages.find({'labels': t['tag']})]\n",
+    "    t['count'] = len(t['images'])"
    ]
   },
   {
